# GildedRose-Refactoring-Kata

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python/: exceptions.py  gilded_rose.py  items.py  items_factory.py  items_utils.py  operations.py
tests/: test_gilded_rose.py
