[tool.poetry]
name = "gildedrose-refactoring-kata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = "^0.782"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
